[144] [Omnibox Next] Fix voice search button overlap on hover
This CL fixes a visual regression where the voice search button would
overlap with adjacent elements the submit button when hovered.
For Variant 1:
https://screenshot.googleplex.com/5hMMrpyXnuvGBB4
For Variant 2:
https://screenshot.googleplex.com/3HVtmW6i7FqmE63

(cherry picked from commit 054b103ac00f5717d13c3fed671849176fc56641)

Fixed: b:469465123, 475848051
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7454810
Commit-Queue: Nihar Majmudar <niharm@google.com>
Cr-Original-Commit-Position: refs/heads/main@{#1568420}
Bug: 475848051
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7478017
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#3541}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/chrome/browser/resources/omnibox_popup/aim_app.css
+++ b/chrome/browser/resources/omnibox_popup/aim_app.css
@@ -104,10 +104,11 @@ cr-composebox[searchbox-layout-mode="TallTopContext"] {
 
 cr-composebox[show-submit_][submit-enabled_][searchbox-layout-mode='TallBottomContext']::part(voice-icon) {
   inset-inline-end: calc(var(--cr-composebox-submit-container-size) + 6px);
+  margin-inline-end: 6px;
 }
 
 cr-composebox[show-submit_][submit-enabled_][searchbox-layout-mode="TallTopContext"]::part(voice-icon) {
-  margin-inline-end: -8px;
+  margin-inline-end: -2px;
 }
 
 cr-composebox[searchbox-layout-mode="TallBottomContext"][show-dropdown_]::part(voice-icon) {
